--- a/notebooks/Profile.ipynb
+++ b/notebooks/Profile.ipynb
@@ -963,7 +963,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc416f8fa90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f44bcb1aac8>"
       ]
      },
      "execution_count": 6,
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,16 +1014,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc414c9bc88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f44bc8074e0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1049,16 +1049,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc416c5e588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f44bc7e5e80>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,16 +1113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc414c3f668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f44bc763748>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
        "Text(0.5, 1.0, 'Violin plot of males')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "Text(0.5, 1.0, 'Violin plot of females')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
